# Fly_Control

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/core/share/ament_index/resource_index/package_run_dependencies/: core
install/core/share/core/: gazebo_launch.py  package.ps1  package.sh
install/vision_interfaces/include/vision_interfaces/vision_interfaces/msg/: vision.h
install/vision_interfaces/share/ament_index/resource_index/rosidl_interfaces/: vision_interfaces
install/vision_interfaces/share/vision_interfaces/: local_setup.sh  package.dsv  package.ps1  package.sh
install/vision_interfaces/share/vision_interfaces/cmake/: export_vision_interfaces__rosidl_generator_cExport-noconfig.cmake  export_vision_interfaces__rosidl_generator_cExport.cmake  export_vision_interfaces__rosidl_generator_pyExport.cmake  export_vision_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_vision_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  vision_interfacesConfig.cmake  vision_interfaces__rosidl_typesupport_cExport-noconfig.cmake
install/vision_interfaces/share/vision_interfaces/msg/: Target.idl  TargetArray.idl
install/vision_pkg/lib/vision_pkg/: vision_camera  vision_d435
install/vision_pkg/share/vision_pkg/: package.ps1  package.sh  package.xml
install/vision_pkg/share/vision_pkg/launch/: vision_combined.launch.py
log/: latest_build
src/core/: CMakeLists.txt  package.xml
src/core/launch/: core_launch.py
src/core/src/: main.cpp
src/core/src/layer0_common/: drone_state.hpp  path.hpp  target.hpp  velocity.hpp
src/core/src/layer1_hal/: drone_hal.cpp  drone_hal.hpp  i_command_publisher.hpp  i_state_provider.hpp  i_vision_provider.hpp
src/core/src/layer2_control/: flight_controller.cpp  flight_controller.hpp  pid_controller.cpp  pid_controller.hpp
src/core/src/layer3_mission/: mission_executor.cpp  mission_executor.hpp
src/core/src/layer4_system/: drone_system.cpp  drone_system.hpp
src/vision_interfaces/: CMakeLists.txt  package.xml
src/vision_interfaces/msg/: Target.msg  Vision.msg
src/vision_pkg/: package.xml  setup.py
src/vision_pkg/vision_pkg/: cv_tools.py  ground_plane_mapper.py  ground_plane_mapper_d435.py  vision_camera.py  vision_d435.py
(+19 files in other folders)
